# waycorner

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: aur.yml  cargo.yml  release.yml
src/: config.rs  corner.rs  main.rs  wayland.rs
templates/: .SRCINFO  PKGBUILD
