[package]
authors = ["Andreas Backx"]
categories = ["command-line-utilities"]
description = "Hot corners for Wayland. Create anchors in the corners of your monitors and execute a command of your choice."
edition = "2018"
homepage = "https://github.com/AndreasBackx/waycorner"
keywords = ["wayland", "hot-corners", "swaywm", "wlroots"]
license = "MIT"
name = "waycorner"
version = "0.1.4"

[dependencies]
anyhow = "1.0"
clap = {version = "3.2.25", features = ["derive"]}
crossbeam-utils = "0.8.15"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.8"
serde = {version = "1.0.163", features = ["derive"]}
smithay-client-toolkit = "0.16.0"
toml = "0.5.11"
wayland-client = "0.29.5"
wayland-protocols = "0.29.5"
